# src/main/resources/swagger.yaml
@@ -38,7 +38,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/Receita'
 
+  /receitas/{id}:
+    get:
+      summary: recuperar receita
+      operationId: getReceita
+      tags:
+        - Receitas
+      parameters:
+        - $ref: '#/components/parameters/id'
+      responses:
+        200:
+          description: sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Receita'
+
 components:
+  parameters:
+    id:
+      in: path
+      name: id
+      required: true
+      schema:
+        type: string
+
   schemas:
 
     ReceitasResponse:
